--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <nav class="container">
     <div class="logo">
       <a href="./index.html">
-        <img src="./resources/images/logo.png" alt="logo">
+        <img src="./resources/images/lslogo.png" alt="logo">
         <div class="logotextleft">
           <span>Lochbaum</span>
         </div>
@@ -41,23 +41,51 @@
 </header>
 <!-- end header-->
 <body>
-  <div class="slideshow">
-    <img src="http://halo.bungie.org/misc/veegie/Turf_Scarab_lg.jpg" alt="slideshow">
-    <div class="calltoaction">
-        <span>Contact Us</span>
-    </div>
+<!-- slideshow -->
+<div id="slider">
+<figure>
+  <div class="slides">
+    <button>Secure Your Business</button>
+    <img src="./resources/images/andrew-neel-117763new.jpg" alt>
   </div>
+  <div class="slides">
+    <button>Get A Quote</button>
+    <img src="./resources/images/emile-perron-190221new.jpg" alt>
+  </div>
+  <div class="slides">
+    <button>Get A Quote</button>
+    <img src="./resources/images/lewis-ngugi-186309new.jpg" alt>
+  </div>
+  <div class="slides">
+    <button>Get A Quote</button>
+    <img src="./resources/images/kyle-ryan-16660new.jpg" alt>
+  </div>
+  <div class="slides">
+    <button>Get A Quote</button>
+    <img src="./resources/images/rawpixel-com-296618new.jpg" alt>
+  </div>
+</figure>
+</div>
+  <!-- slideshow -->
   <div class="maincontent">
-    <h1>Header</h1>
-    <p>Spicy jalapeno bacon ipsum dolor amet minim chuck eiusmod excepteur, jerky prosciutto nisi dolore qui in duis. Minim non tri-tip voluptate aliquip ex, veniam turducken ground round doner corned beef. In enim ex officia consectetur. Prosciutto bacon in, magna ipsum hamburger pork chop.
-
-Pastrami tenderloin mollit exercitation turkey. Filet mignon voluptate ham hock eu pork belly. Leberkas eiusmod aute, duis corned beef chuck rump laborum porchetta. Flank veniam drumstick pork chop aute prosciutto elit occaecat kevin doner nulla ground round ad. Nulla porchetta drumstick nostrud in, velit swine aliquip. Swine sint id brisket hamburger laborum. Eu ham strip steak veniam ut.
-
-Ribeye bacon shankle tri-tip minim beef nisi laboris meatloaf in hamburger ad pork loin quis. Rump short ribs in, eu ullamco ham frankfurter eiusmod brisket burgdoggen tri-tip ball tip est. Voluptate andouille salami pancetta picanha, sausage pork pork loin alcatra bresaola do reprehenderit. Adipisicing ut cupim laboris in ham incididunt consequat cillum. Ad voluptate consectetur officia. Excepteur incididunt tongue occaecat, pancetta labore sunt veniam voluptate pork chop id ut shoulder.
-
-Ad consectetur nisi reprehenderit frankfurter pork chop ut andouille picanha pork belly. Dolor swine ham aliqua chicken. Cupidatat nostrud laborum ground round leberkas. Picanha salami strip steak do dolor ullamco culpa et nulla sausage nisi. Enim reprehenderit short loin chicken, shankle ribeye biltong capicola burgdoggen pancetta landjaeger do porchetta. Reprehenderit fatback occaecat magna sed.
-
-Qui chicken turducken, landjaeger adipisicing in pariatur boudin bacon duis deserunt meatloaf flank ea. Shank pariatur quis jowl shankle. Brisket chicken sirloin, pork minim pancetta officia biltong drumstick chuck andouille fatback. In excepteur tri-tip ut commodo turducken labore.</p>
+    <div class="aboutus">
+      <div class='imagehaeder'></div>
+      <h1>About Us</h1>
+      <p>Our desire for Lochbaum Security is to partner with you and your staff to make your business as secure and successful as possible.  Cyber crimes reached an all-time high in 2016, up 40% from 2015.  It has become necessary for all companies to take stock of how they are doing business and to stay vigilant to prevent attacks.  Whether your goal is PCI DSS compliance or you are wanting to safeguard your networks, we can help!  (more...)</p>
+      <button>Learn More</button>
+    </div>
+    <div class="aboutus">
+      <div class='imagehaeder'></div>
+      <h1>Contact Us</h1>
+      <p>Our desire for Lochbaum Security is to partner with you and your staff to make your business as secure and successful as possible.  Cyber crimes reached an all-time high in 2016, up 40% from 2015.  It has become necessary for all companies to take stock of how they are doing business and to stay vigilant to prevent attacks.  Whether your goal is PCI DSS compliance or you are wanting to safeguard your networks, we can help!  (more...)</p>
+      <button>Learn More</button>
+    </div>
+    <div class="aboutus">
+      <div class='imagehaeder'></div>
+      <h1>Services</h1>
+      <p>Our desire for Lochbaum Security is to partner with you and your staff to make your business as secure and successful as possible.  Cyber crimes reached an all-time high in 2016, up 40% from 2015.  It has become necessary for all companies to take stock of how they are doing business and to stay vigilant to prevent attacks.  Whether your goal is PCI DSS compliance or you are wanting to safeguard your networks, we can help!  (more...)</p>
+      <button>Learn More</button>
+    </div>
   </div>
 </body>
 <footer>
