--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
 <div id="slider">
 <figure>
   <div class="slides">
-    <button>Secure Your Business</button>
-    <img src="./resources/images/andrew-neel-117763new.jpg" alt>
+    <button>Contact Us</button>
+    <img src="./resources/images/computerlab.jpg" alt>
   </div>
   <div class="slides">
-    <button>Get A Quote</button>
+    <button>Contact Us</button>
     <img src="./resources/images/emile-perron-190221new.jpg" alt>
   </div>
   <div class="slides">
-    <button>Get A Quote</button>
+    <button>Contact Us</button>
     <img src="./resources/images/lewis-ngugi-186309new.jpg" alt>
   </div>
   <div class="slides">
-    <button>Get A Quote</button>
+    <button>Contact Us</button>
     <img src="./resources/images/kyle-ryan-16660new.jpg" alt>
   </div>
   <div class="slides">
-    <button>Get A Quote</button>
+    <button>Contact Us</button>
     <img src="./resources/images/rawpixel-com-296618new.jpg" alt>
   </div>
 </figure>
@@ -71,7 +71,7 @@
     <div class="aboutus">
       <div class='imagehaeder'></div>
       <h1>About Us</h1>
-      <p>Our desire for Lochbaum Security is to partner with you and your staff to make your business as secure and successful as possible.  Cyber crimes reached an all-time high in 2016, up 40% from 2015.  It has become necessary for all companies to take stock of how they are doing business and to stay vigilant to prevent attacks.  Whether your goal is PCI DSS compliance or you are wanting to safeguard your networks, we can help!  (more...)</p>
+      <p>Our desire at Lochbaum Security is to be a turn-key solution for you and your business.  While we do specialize in cyber security and auditting, we also offer networking, database installation and maintenance, web theming, hardware ordering repair and more.  Whether your goal is to secure your networks, order and install a new server, or just to repair an old desktop, we can help!   (more...)</p>
       <button>Learn More</button>
     </div>
     <div class="aboutus">
@@ -83,7 +83,7 @@
     <div class="aboutus">
       <div class='imagehaeder'></div>
       <h1>Services</h1>
-      <p>Our desire for Lochbaum Security is to partner with you and your staff to make your business as secure and successful as possible.  Cyber crimes reached an all-time high in 2016, up 40% from 2015.  It has become necessary for all companies to take stock of how they are doing business and to stay vigilant to prevent attacks.  Whether your goal is PCI DSS compliance or you are wanting to safeguard your networks, we can help!  (more...)</p>
+      <p>Our desire at Lochbaum Security is to be a turn-key solution for you and your business.  While we do specialize in cyber security and auditting, we also offer networking, database installation and maintenance, web theming, hardware ordering/repair and more.  Whether your goal is to secure your networks, order and install a new server, or just to repair an old desktop, we can help!</p>
       <button>Learn More</button>
     </div>
   </div>
