--- a/johnl-project-master 83017/index.html
+++ b/johnl-project-master 83017/index.html
@@ -22,21 +22,30 @@
       </a>
     </div>
 	
-	    <div class="menu">
-        <ul>
-          <li>About</li>
-          <li>Services</li>
-          <li>Statistics</li>
-          <li>Contact Us</li>
-          <li>Testimonials</li>
-          </div>
-        </ul>
-    </div>
+<div class="menu">
+     <ul>
+       <li>About</li>
+       <div class="dropdown">
+         <button class="dropbtn">Services</button>
+           <div class="dropdown-content">
+             <a href="./aboutus.html"> About Us</a>
+                 <a href="./contactus.html"> Contact Us</a>
+             <a href="./services.html"> Services</a>
+             <a href="./Testimonials.html"> Testimonials</a>
+           </div>
+         </div>
+       <li>Statistics</li>
+       <li>Contact Us</li>
+       <li>Testimonials</li>
+       </div>
+     </ul>
+   </div>
 	
     <div class="dropdown">
         <button class="dropbtn">More Info</button>
 		<div class="dropdown-content">
-          <a href="./aboutus.html"> About Us</a>
+		
+          <a href="./aboutus.html"> About</a>
 		  <a href="./contactus.html"> Contact Us</a>
           <a href="./services.html"> Services</a>
           <a href="./Testimonials.html"> Testimonials</a>
@@ -52,11 +61,13 @@
 </header>
 <!-- end header-->
 <body>
+
+
 <!-- slideshow -->
 <div id="slider">
 <figure>
   <div class="slides">
-  <button>
+   <button>
   <form action="./contactus.html">
     <input type="submit" value="Contact Us" />
 </form> Contact Us </button>
@@ -87,34 +98,33 @@
     <div class="aboutus">
       <div class='imagehaeder'></div>
       <h1>About Us</h1>
-      <p> Our desire at Lochbaum Security is to be a turn-key solution for you and your business.  We LOVE the IT sector and the unique challenges that come along with it.  With years of experience in the IT field combined with internationally recognized certifications from CompTIA, we are well-equipped to meet your technological needs. <br> <br>  Whether your goal is to safeguard your network, order and install a new server, or just troubleshoot a home desktop computer, we can help  Reach out today for a free consultation. </p>
-      <button>Learn More</button>
-    </div>
+      <p> Our desire at Lochbaum Security is to be a turn-key solution for you and your business. With years of experience in the IT field combined with internationally recognized certifications, we are ready to meet all of your technological needs.</p>
+       <a href="insertlink" class="button">Learn More</a>
+	      </div>
     <div class="aboutus">
       <div class='imagehaeder'></div>
       <h1>Contact Us</h1>
       <p> Contact us today for a free consultation.  Insert Live Chat   
 	  </p>
-	  <br> <br> <br> <br> <br> <br> <br> <br> <br> <br>
-      <button>Learn More</button>
+	        <a href="insertlink" class= "button" > Learn More</a>
     </div>
     <div class="aboutus">
-      <div class='imagehaeder'></div>
+      <div class='imageheader'></div>
 	  
       <h1>Services</h1>
 	  
-	  <p style= "text-align:center;">
-	  <ul style="list-style-type:square">
-        <li> Security/Network Auditing</li> <br> <br>
-        <li> Network Configuration</li> <br> <br>
-        <li> Database Installation and Maintenance</li> <br> <br>
-        <li> Specialized Hardware Ordering/Repairs</li>	<br> <br> 
-        <li> Software Installation and Training</li> <br> <br>
+	  
+	  <ul >
+        <li> Security/Network Auditing</li> 
+        <li> Network Configuration</li> 
+        <li> Database Installation and Maintenance</li> 
+        <li> Specialized Hardware Ordering/Repairs</li>	 
+        <li> Software Installation and Training</li> 
         <li> On-Site Hardware Installation </li>	  
 	  </ul>
-	  <br> <br>
+	  
 
-      <button>Learn More</button>
+      <ahref="insertlink" class="button">Learn More</a>
    </div>
        </div>
 	   
@@ -126,9 +136,11 @@
 <footer>
   <div class="footer-nav">
   <ul>
-    <li>Home</li>
+    <li> <a href="insertlink">Home</a></li>
+	 <li> <a href="insertlink">About</a></li>
     <li> Contact Us</li>
-    <li> About</li>
+   <li> Services</li>
+   <li> Testimonials</li>
   </div>
 </footer>
 </html>
