--- a/johnl-project-master 83017/contactus.html
+++ b/johnl-project-master 83017/contactus.html
@@ -26,7 +26,7 @@
         <ul>
           <li>About</li>
           <li>Services</li>
-          <li>Statistics</li>
+          
           <li>Contact Us</li>
           <li>Testimonials</li>
           </div>
@@ -36,7 +36,7 @@
     <div class="dropdown">
         <button class="dropbtn">More Info</button>
 		<div class="dropdown-content">
-          <a href="./aboutus.html"> About Us</a>
+          <a href="./aboutus.html"> About</a>
 		  <a href="./contactus.html"> Contact Us</a>
           <a href="./services.html"> Services</a>
           <a href="./Testimonials.html"> Testimonials</a>
@@ -51,3 +51,12 @@
   </nav>
 </header>
 <!-- end header-->
+<footer>
+  <div class="footer-nav">
+  <ul>
+    <li>Home</li>
+	 <li> About</li>
+    <li> Contact Us</li>
+   <li> Services</li>
+   <li> Testimonials</li>
+  </div>
